@@ -32,7 +32,7 @@ require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
  *
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
-class tx_oelib_FakeSession_testcase  extends tx_phpunit_testcase {
+class tx_oelib_FakeSession_testcase extends tx_phpunit_testcase {
 	/**
 	 * @var tx_oelib_FakeSession the object to test
 	 */
@@ -43,6 +43,7 @@ class tx_oelib_FakeSession_testcase  extends tx_phpunit_testcase {
 	}
 
 	public function tearDown() {
+		$this->fixture->__destruct();
 		unset($this->fixture);
 	}
 
