@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2657] Change: testingFramework::cleanUp should clean up the mapper registry and everything
 - [#2217] Fix: tx_oelib_testingFramework::cleanUp() must not fail if a file created by the testing framework does not exist
 - [#2531] Feature: Enhance the mailer classes to also be able to add attachments
 - [#2623] Feature: Adapt the Mailer classes to send a Mail object
